# multisource-memory-benchmark

./: .gitignore  ANONYMIZATION.md  ARCHITECTURE.md  CACHE_POLICY.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASHEET.md  DATA_LICENSE  EXTENDING.md  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  SECURITY.md  SUBMISSION_PROTOCOL.md  pyproject.toml  requirements.txt
configs/: models.yaml  questions.yaml  seeds.yaml  splits.yaml
configs/few_shot/: AGENTS.md
data/: .gitignore  CITATION.cff  CROISSANT_RAI.json  DATA_LICENSE  README.md  fetch_benchmark.py
data/sample/: README.md  personas_one.txt
examples/: README.md
examples/01_minimal_method/: README.md  always_first.py  test_always_first.py
examples/02_custom_question/: README.md  compute_h1.py  compute_mu_h1.py  fixture_events.json  h1_question.yaml  test_custom_question.py
examples/03_programmatic_api/: README.md  compute_accuracy.py
examples/04_sample_submission/: README.md  make_submission.py
examples/05_custom_stream/: README.md  calendar_hint_projector.py  calendar_hint_renderer.py  compute_mu_calendar_hint.py  fixture_events.json  test_custom_stream.py
paper_artifacts/: MANIFEST.md  README.md  __init__.py  _appendix_helpers.py  _common.py  leaderboard.csv  reproduce_paper.py  verify_external_submission.py
paper_artifacts/appendix/: __init__.py  api_cache_inventory.py  atom_extraction_faithfulness.py  cross_bias_transfer.py  cross_condition_gpt_vs_gemini.py  cross_extractor_robustness.py  cross_seed_stability.py  dgp_perturbation.py  few_shot_supplementary.py  noise_perturbation.py  per_question_extraction_accuracy.py  per_type_macro_accuracy_full.py  prediction_distributions_c_pr_f_miss.py  prediction_distributions_e_causal.py  source_ceiling_complement_table.py  t2_fusion_per_type_per_difficulty.py  t2_fusion_selective_per_type_per_difficulty.py  t3_llm_per_type_per_difficulty.py  t3_llm_selective_per_type_per_difficulty.py  train_size_ablation.py
paper_artifacts/main/: __init__.py  factorial_decomposition.py  forced_accuracy_main.py  (+2 more)
schemas/: method_prediction.schema.json  question_definition.schema.json
scripts/: anonymization_audit.py  build_croissant_rai.py  regenerate_appendix_f_results.py  upload_to_hf.py
tests/: conftest.py  test_smoke_end_to_end.py
(+162 files in other folders)
